# Siosa

./: .env.example  .gitignore  AI_tech_stack.docx  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml  railway.toml  railway.variables.example  start.bat  start.ps1
.cursor/rules/: changelog.mdc
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DEVELOPER.md  CHANGELOG.md  LAPTOP_SETUP.md  PLANNED.md  PLANNED_ROADMAP_BASELINE.md  PROJECT_OVERVIEW.txt  README_HEADER.md  architecture.html  changelog.html  index.html  planned-baseline.html  planned.html
docs/assets/: architecture-pipeline.css  architecture-pipeline.js  pipeline-config-developer.json  pipeline-config.json
scripts/: add_changelog_entry.py  export_transfer.ps1  start_api.sh  sync_docs.py  verify_railway_deploy.ps1
src/poe_agent/: __init__.py
src/poe_agent/evaluator/: __init__.py  context.py  inline.py  judges.py  metrics.py  service.py
src/poe_agent/executor/: __init__.py  (+2 more)
tests/: test_eval_context.py  test_evaluator.py  test_graph_timing.py  test_inline_scores.py  test_live_retrieve.py  test_operator_analytics.py  test_provider_health.py  test_provider_modes.py  test_provider_settings.py  test_query_errors.py  test_query_fusion.py  test_query_response.py  test_rate_limit.py  test_retrieval_gate.py  test_retriever.py  test_score_endpoint.py  test_session_memory.py  test_short_model_label.py  test_transcribe.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+58 files in other folders)
