[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "poe-wiki-agent"
version = "0.1.0"
description = "Path of Exile 1 wiki-grounded Q&A agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Phase 0-1: harness
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Phase 2: retriever + generator
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0.0",
    "tiktoken>=0.8.0",
    # Phase 3: hybrid retrieval
    "rank-bm25>=0.2.2",
    # Phase 4: orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Phase 5-6: eval + cloud (optional at runtime)
    "boto3>=1.35.0",
    # Multi-provider LLM
    "anthropic>=0.39.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "markdown>=3.5.0",
]
speech = [
    "faster-whisper>=1.0.0",
]

[project.scripts]
poe-api = "poe_agent.harness.api.app:main"
poe-ingest = "poe_agent.retriever.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
